exports[`invalid(1): {\"main\": \"./index.js\"} 1`] = `

[Input]
  1 | {"main": "./index.js"}

`;

exports[`invalid(1): {\"main\": \"./index.js\"} 2`] = `

Message:
> 1 | {"main": "./index.js"}
    |  ^^^^^^ Prefer an \`exports\`-first package interface instead of \`main\`.

`;

exports[`invalid(2): {\"module\": \"./index.mjs\"} 1`] = `

[Input]
  1 | {"module": "./index.mjs"}

`;

exports[`invalid(2): {\"module\": \"./index.mjs\"} 2`] = `

Message:
> 1 | {"module": "./index.mjs"}
    |  ^^^^^^^^ Prefer an \`exports\`-first package interface instead of \`module\`.

`;

exports[`invalid(3): {\"browser\": \"./index.browser.js\"} 1`] = `

[Input]
  1 | {"browser": "./index.browser.js"}

`;

exports[`invalid(3): {\"browser\": \"./index.browser.js\"} 2`] = `

Message:
> 1 | {"browser": "./index.browser.js"}
    |  ^^^^^^^^^ Prefer an \`exports\`-first package interface instead of \`browser\`.

`;

exports[`invalid(4): {\"types\": \"./index.d.ts\"} 1`] = `

[Input]
  1 | {"types": "./index.d.ts"}

`;

exports[`invalid(4): {\"types\": \"./index.d.ts\"} 2`] = `

Message:
> 1 | {"types": "./index.d.ts"}
    |  ^^^^^^^ Prefer an \`exports\`-first package interface instead of \`types\`.

`;

exports[`invalid(5): {\"typings\": \"./index.d.ts\"} 1`] = `

[Input]
  1 | {"typings": "./index.d.ts"}

`;

exports[`invalid(5): {\"typings\": \"./index.d.ts\"} 2`] = `

Message:
> 1 | {"typings": "./index.d.ts"}
    |  ^^^^^^^^^ Prefer an \`exports\`-first package interface instead of \`typings\`.

`;

exports[`invalid(6): {\"exports\": \"./index.js\", \"main\": \"./index.js\", \"module\": \"./index.mjs\", \"browser\": {\"./server.js\": \"./browser.js\"}, \"types\": \"./index.d.ts\", \"typings\": \"./index.d.ts\"} 1`] = `

[Input]
  1 | {"exports": "./index.js", "main": "./index.js", "module": "./index.mjs", "browser": {"./server.js": "./browser.js"}, "types": "./index.d.ts", "typings": "./index.d.ts"}

`;

exports[`invalid(6): {\"exports\": \"./index.js\", \"main\": \"./index.js\", \"module\": \"./index.mjs\", \"browser\": {\"./server.js\": \"./browser.js\"}, \"types\": \"./index.d.ts\", \"typings\": \"./index.d.ts\"} 2`] = `

Message:
> 1 | {"exports": "./index.js", "main": "./index.js", "module": "./index.mjs", "browser": {"./server.js": "./browser.js"}, "types": "./index.d.ts", "typings": "./index.d.ts"}
    |                           ^^^^^^ Prefer an \`exports\`-first package interface instead of \`main\`.

`;

exports[`invalid(6): {\"exports\": \"./index.js\", \"main\": \"./index.js\", \"module\": \"./index.mjs\", \"browser\": {\"./server.js\": \"./browser.js\"}, \"types\": \"./index.d.ts\", \"typings\": \"./index.d.ts\"} 3`] = `

Message:
> 1 | {"exports": "./index.js", "main": "./index.js", "module": "./index.mjs", "browser": {"./server.js": "./browser.js"}, "types": "./index.d.ts", "typings": "./index.d.ts"}
    |                                                 ^^^^^^^^ Prefer an \`exports\`-first package interface instead of \`module\`.

`;

exports[`invalid(6): {\"exports\": \"./index.js\", \"main\": \"./index.js\", \"module\": \"./index.mjs\", \"browser\": {\"./server.js\": \"./browser.js\"}, \"types\": \"./index.d.ts\", \"typings\": \"./index.d.ts\"} 4`] = `

Message:
> 1 | {"exports": "./index.js", "main": "./index.js", "module": "./index.mjs", "browser": {"./server.js": "./browser.js"}, "types": "./index.d.ts", "typings": "./index.d.ts"}
    |                                                                                                                      ^^^^^^^ Prefer an \`exports\`-first package interface instead of \`types\`.

`;

exports[`invalid(6): {\"exports\": \"./index.js\", \"main\": \"./index.js\", \"module\": \"./index.mjs\", \"browser\": {\"./server.js\": \"./browser.js\"}, \"types\": \"./index.d.ts\", \"typings\": \"./index.d.ts\"} 5`] = `

Message:
> 1 | {"exports": "./index.js", "main": "./index.js", "module": "./index.mjs", "browser": {"./server.js": "./browser.js"}, "types": "./index.d.ts", "typings": "./index.d.ts"}
    |                                                                                                                                               ^^^^^^^^^ Prefer an \`exports\`-first package interface instead of \`typings\`.

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 1`] = `

[Input]
  1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 2`] = `

Message:
> 1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}
    |  ^^^^^^ Prefer an \`exports\`-first package interface instead of \`main\`.

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 3`] = `

Message:
> 1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}
    |                        ^^^^^^^^ Prefer an \`exports\`-first package interface instead of \`module\`.

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 4`] = `

Message:
> 1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}
    |                                                 ^^^^^^^ Prefer an \`exports\`-first package interface instead of \`types\`.

`;
